--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-PORT= //OPTIONAL_PORT_IF_YOU_WANT
+PORT= 8080
 DB_ADRESS= mongodb+srv://USERNAME:PASSWORD@DEPLOYMENT_NAME.qimluao.mongodb.net/FOLDER_NAME?retryWrites=true&w=majority
