--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 PORT= 8080
 DB_ADRESS= mongodb+srv://USERNAME:PASSWORD@DEPLOYMENT_NAME.qimluao.mongodb.net/FOLDER_NAME?retryWrites=true&w=majority
+TOKEN_KEY= <you can create it with "openssl rand -base64 32" in linux>
